# snapmaker-u1-toolkit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  LICENSE  README.md  TROUBLESHOOTING.md  deploy_to_runtime.sh  pyproject.toml  requirements.txt
adapters/: README.md
docs/: DESIGN-CONTRACT.md  HEADLESS.md  PRINT-FROM-PHONE.md  PROFILES.md  ROADMAP.md  SAFETY.md  TELEGRAM-SETUP.md  WINDOWS.md  _config.yml  events.md  index.md  ollama-bridge.md  v1.6-design.md  v2.1.0-multipart-kits-plan.md  verify-cancel-hook.md
plugin/: plugin.yaml  pyproject.toml
plugin/src/snapmaker_u1/: __init__.py  pending.py
plugin/src/snapmaker_u1/hooks/: __init__.py  attachment_injector.py  attachment_router.py  channel_sanitizer.py  next_action_directive.py
profiles/: README.md  community_016_optimal_u1_textured_pei.json  community_016_optimal_u1_textured_pei_fuzzy_external_random_staggered_seams.json  community_016_optimal_u1_textured_pei_fuzzy_external_staggered_seams.json  community_016_optimal_u1_textured_pei_override.json  community_020_strength_supports_u1_textured_pei.json  community_020_strength_u1_textured_pei.json  community_generic_petg_sunlu_black_u1_textured_pei.json
references/: snapmaker-u1-camera-websocket.md  snapmaker-u1-filament-detection-api-2026-06.md  snapmaker-u1-headless-slicing-and-toolhead-notes-2026-06.md  snapmaker-u1-lan-probe-2026-06.md  snapmaker-u1-last-layer-photo-watch-2026-06-21.md  snapmaker-u1-orca-moonraker.md  snapmaker-u1-printhead-numbering-and-start-workflow-2026-06.md  snapmaker-u1-research.md  (+1 more)
scripts/: u1_arrange.py  (+31 more)
(+121 files in other folders)
